--- a/server/temperatura.html
+++ b/server/temperatura.html
@@ -227,12 +227,44 @@
   <script src="js/black-dashboard.min.js?v=1.0.0"></script>
   <script src="esta_meteo/estacionmete.js"></script>
   <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
-
+  <script src="/socket.io/socket.io.js" charset="utf-8"></script>
   
 
 
 
   <script>
+   const socket = io();
+  var ctx = document.getElementById('chartBig1').getContext('2d');
+  var chart = new Chart(ctx, {
+    // The type of chart we want to create
+    type: 'line',
+    // The data for our dataset
+    data: {
+        labels: ["Segundos"],
+        datasets: [{
+            label: "Temperatura",
+            backgroundColor: 'rgb(52, 73, 94)',
+            borderColor: 'rgb(41, 128, 185)',
+            data: [],
+            fill: true,
+        }
+      ]
+    },
+
+    // Configuration options go here
+    options: {}
+  });
+
+  let counter = 0 ;
+  socket.on('arduino:data', function (dataSerial) {
+   console.log(dataSerial);
+    chart.data.labels.push(dataSerial.value.time.hora + ':' + dataSerial.value.time.minutos + ':' + dataSerial.value.time.segundos);
+    chart.data.datasets.forEach(dataset => {
+   dataset.data.push(dataSerial.value.temperatura)
+  });
+    counter++;
+    chart.update();
+  });
     $(document).ready(function() {
     $().ready(function() {
       $sidebar = $('.sidebar');
