--- a/server/viento.html
+++ b/server/viento.html
@@ -235,20 +235,64 @@
   axios.get('http://localhost:3000/registro')
   .then(function (response) {
     // handle success
-    console.log(response.data);
+    let result= response.data
+    console.log(result);
+    
+    //grafica de barras de viento
+  var ctx = document.getElementById('vientoBarras').getContext('2d');
+  var chart = new Chart(ctx, {
+    // The type of chart we want to create
+    type: 'bar',
+    
+    // The data for our dataset
+    data: {
+        labels: [],
+        datasets: [{
+            label:  result[0].time.Dia + 5 + "/"+result[0].time.Mes + "/"+result[0].time.anio,
+            backgroundColor: 'rgb(255, 0, 0)',
+            borderColor: 'rgb(41, 108, 105)',
+            data: [result[0].viento],
+            fill:true,
+        },{
+            label: result[1].time.Dia + 4 +"/"+result[1].time.Mes + "/"+result[1].time.anio,
+            backgroundColor: 'rgb(0, 128, 128))',
+            borderColor: 'rgb(41, 128, 185)',
+            data: [result[1].viento],
+            fill: true,
+        },{
+            label: result[2].time.Dia +3 + "/"+result[2].time.Mes + "/"+result[2].time.anio,
+            backgroundColor: 'rgb(0, 0, 128)',
+            borderColor: 'rgb(41, 128, 185)',
+            data: [result[2].viento],
+            fill: true,
+        },{
+            label: result[3].time.Dia + 2 + "/"+result[3].time.Mes + "/"+result[3].time.anio,
+            backgroundColor: 'rgb(52, 73, 94)',
+            borderColor: 'rgb(41, 128, 185)',
+            data: [result[3].viento],
+            fill: true,
+        },{
+            label: result[4].time.Dia + 1 + "/"+result[4].time.Mes + "/"+result[4].time.anio,
+            backgroundColor: 'rgb(128, 0, 0)',
+            borderColor: 'rgb(41, 128, 185)',
+            data: [result[4].viento],
+            fill: true,
+        }
+      ]
+    },
+
+    // Configuration options go here
+    options: {}
+});
+//termina grafica de barras de viento
+  
   })
   .catch(function (error) {
     // handle error
     console.log(error);
-  })
-  .then(function () {
-    // always executed
+    return null
   });
-  var fecha={};
-  fecha.dia = 18;
-  fecha.mes = 6;
-  fecha.anio = 2020; 
-   
+  
   const socket = io();
   var ctx = document.getElementById('chartBig1').getContext('2d');
   var chart = new Chart(ctx, {
@@ -271,54 +315,7 @@
     options: {}
   });
 
- //grafica de barras de viento
- var ctx = document.getElementById('vientoBarras').getContext('2d');
-  var chart = new Chart(ctx, {
-    // The type of chart we want to create
-    type: 'bar',
-
-    // The data for our dataset
-    data: {
-        labels: ["Segundos"],
-        datasets: [{
-            label: "Dato1",
-            backgroundColor: 'rgb(255, 0, 0)',
-            borderColor: 'rgb(41, 108, 105)',
-            data: [],
-            fill:true,
-        },{
-            label: "Dato2",
-            backgroundColor: 'rgb(0, 128, 128))',
-            borderColor: 'rgb(41, 128, 185)',
-            data: [],
-            fill: true,
-        },{
-            label: "Dato3",
-            backgroundColor: 'rgb(0, 0, 128)',
-            borderColor: 'rgb(41, 128, 185)',
-            data: [],
-            fill: true,
-        },{
-            label: "Dato5",
-            backgroundColor: 'rgb(52, 73, 94)',
-            borderColor: 'rgb(41, 128, 185)',
-            data: [],
-            fill: true,
-        },{
-            label: "Dato6",
-            backgroundColor: 'rgb(128, 0, 0)',
-            borderColor: 'rgb(41, 128, 185)',
-            data: [],
-            fill: true,
-        }
-      ]
-    },
-
-    // Configuration options go here
-    options: {}
-});
-//termina grafica de barras de viento
-
+ 
 
 
 
