--- a/server/presionatmosferica.html
+++ b/server/presionatmosferica.html
@@ -138,13 +138,13 @@
           <div class="col-lg-4">
             <div class="card card-chart">
               <div class="card-header">
-                <h5 class="card-category">xxxxx</h5>
-                <h3 class="card-title"><i class="tim-icons icon-delivery-fast text-info"></i> 10000</h3>
+                <h5 class="card-category">Expresado en</h5>
+                <h3 class="card-title"><i class="tim-icons icon-delivery-fast text-info"></i> Presión Atmosférica</h3>
               </div>
               
               <div class="card-body">
                 <div class="chart-area">
-                  <canvas id="CountryChart"></canvas>
+                  <canvas id="linealpresion"></canvas>
                 </div>
               </div>
             </div>
@@ -364,6 +364,30 @@ var ctx = document.getElementById('presionBarras').getContext('2d');
     options: {}
 });
 //termina grafica de barras de presion
+
+//GRAFICA LINEAL 3 DE PRESION
+var ctx = document.getElementById('linealpresion').getContext('2d');
+  var chart = new Chart(ctx, {
+    // The type of chart we want to create
+    type: 'line',
+
+    // The data for our dataset
+    data: {
+        labels: ["Segundos"],
+        datasets: [{
+            label: "Dato1",
+            backgroundColor: 'rgb(128, 0, 0)',
+            borderColor: 'rgb(41, 108, 105)',
+            data: [],
+            fill:true,
+        }
+      ]
+    },
+
+    // Configuration options go here
+    options: {}
+});
+//termina grafica lineal presion
 
 
 
