--- a/server/index.html
+++ b/server/index.html
@@ -203,31 +203,31 @@
         labels: ["Segundos"],
         datasets: [{
             label: "Temperatura",
-            backgroundColor: 'rgb(128, 0, 128)',
-            borderColor: 'rgb(41, 108, 105)',
+            backgroundColor: 'rgb(128, 0, 128, 0.2)',
+            borderColor: 'rgb(41, 108, 185)',
             data: [0],
             fill:true,
         },{
             label: "Humedad",
-            backgroundColor: 'rgb(255, 0, 0)',
+            backgroundColor: 'rgb(255, 0, 0, 0.2)',
             borderColor: 'rgb(41, 128, 185)',
             data: [0],
             fill: true,
         },{
             label: "Presión atmosférica",
-            backgroundColor: 'rgb(240,128,128)',
+            backgroundColor: 'rgb(240,128,128, 0.2)',
             borderColor: 'rgb(41, 128, 185)',
             data: [0],
             fill: true,
         },{
             label: "Intensidad luminosa",
-            backgroundColor: 'rgb(255,255,0)',
+            backgroundColor: 'rgb(255,255,0, 0.2)',
             borderColor: 'rgb(41, 128, 185)',
             data: [0],
             fill: true,
         },{
             label: "Viento",
-            backgroundColor: 'rgb(50,205,50)',
+            backgroundColor: 'rgb(50,205,50, 0.2)',
             borderColor: 'rgb(41, 128, 185)',
             data: [0],
             fill: true,
@@ -257,35 +257,35 @@ axios
         datasets: [
           {
             label: "Temperatura",
-            backgroundColor: "rgb(128, 0, 128)",
-            borderColor: "rgb(41, 108, 105)",
+            backgroundColor: "rgb(128, 0, 128,0.2)",
+            borderColor: "rgb(41, 108, 185)",
             data: [0],
             fill: true,
           },
           {
             label: "Humedad",
-            backgroundColor: "rgb(255, 0, 0)",
+            backgroundColor: "rgb(255, 0, 0,0.2)",
             borderColor: "rgb(41, 128, 185)",
             data: [0],
             fill: true,
           },
           {
             label: "Presión atmosférica",
-            backgroundColor: "rgb(240,128,128)",
+            backgroundColor: "rgb(240,128,128,0.2)",
             borderColor: "rgb(41, 128, 185)",
             data: [0],
             fill: true,
           },
           {
             label: "Intensidad luminosa",
-            backgroundColor: "rgb(255,255,0)",
+            backgroundColor: "rgb(255,255,0, 0.2)",
             borderColor: "rgb(41, 128, 185)",
             data: [0],
             fill: true,
           },
           {
             label: "Viento",
-            backgroundColor: "rgb(50,205,50)",
+            backgroundColor: "rgb(50,205,50, 0.2)",
             borderColor: "rgb(41, 128, 185)",
             data: [0],
             fill: true,
