--- a/server/index.html
+++ b/server/index.html
@@ -32,7 +32,7 @@
         <div class="logo">
         
           <a href="javascript:void(0)" class="simple-text logo-normal">
-            General
+            Live
           </a>
         </div>
         <ul class="nav">
