--- a/server/humedad.html
+++ b/server/humedad.html
@@ -19,7 +19,8 @@
   <link href="css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
  
   <link href="esta_meteo/estacionmete.css" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+ 
+ 
 
   
 </head>
@@ -240,7 +241,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+<link rel="stylesheet" type="text/css" href="css/daterangepicker.css" />
   
 
   <script>
