--- a/server/index.html
+++ b/server/index.html
@@ -236,7 +236,15 @@
     },
 
     // Configuration options go here
-    options: {}
+    options:  
+   {
+    legend: {
+            labels: {
+                fontColor: "white",
+                
+            }
+    }
+    }
 });
 
 axios
@@ -294,7 +302,14 @@ axios
       },
 
       // Configuration options go here
-      options: {},
+      options: {
+        legend: {
+            labels: {
+                fontColor: "white",
+                
+            }
+    }
+      },
     });
     counter = 1;
     result.reverse().forEach((element) => {
