--- a/server/humedad.html
+++ b/server/humedad.html
@@ -567,7 +567,7 @@ var ctx1 = document.getElementById('humedaddate').getContext('2d');
             label: "Humedad",
             backgroundColor: 'rgb(52, 73, 94)',
             borderColor: 'rgb(41, 128, 185)',
-            data: [],
+            data: [0],
             fill: true,
         }
       ]
