--- a/server/humedad.html
+++ b/server/humedad.html
@@ -538,17 +538,16 @@ var ctx1 = document.getElementById('humedaddate').getContext('2d');
   //termina grafica lineal humedad
 
     chartl.data.datasets[0].data.push(0)
-    let counter = 1
+
     result.reverse().forEach(element => {
       console.log(chartl.data.labels);
       if (element.humedad == null) {
         chartl.data.datasets[0].data.push(0)
       }else{
-        chartl.data.datasets[0].data.push(element.humedad)
+        chartl.data.datasets[0].data.push(Math.round(element.humedad*100)/100)
       }
       
-      chartl.data.labels.push(element.time.hora+counter)
-      counter++
+      chartl.data.labels.push(element.time.hora)
       
     });
   //termina grafica de barras de viento
