--- a/server/temperatura.html
+++ b/server/temperatura.html
@@ -376,7 +376,7 @@
     });
   //termina grafica lineal humedad
     chart1.data.datasets[0].data.push(0)
-    counter = 1
+  
     result.reverse().forEach(element => {
       console.log(chart1.data.labels);
       if (element.humedad == null) {
@@ -385,8 +385,7 @@
         chart1.data.datasets[0].data.push(Math.round(element.temperatura*100)/100)
       }
       
-      chart1.data.labels.push(element.time.hora+counter)
-      counter++
+      chart1.data.labels.push(element.time.hora)
       
     });
     chart1.update()
