--- a/server/presionatmosferica.html
+++ b/server/presionatmosferica.html
@@ -385,7 +385,7 @@
         }
     }
     });
-  //termina grafica lineal humedad
+  //termina grafica lineal
     chart1.data.datasets[0].data.push(0)
 
     result.reverse().forEach(element => {
@@ -517,7 +517,7 @@ function cb(start, end) {
         if (element.humedad == null ) {
           chartt.data.datasets[0].data.push(0);
         }else{
-          chartt.data.datasets[0].data.push(element.presion);        
+          chartt.data.datasets[0].data.push(Math.round(element.presion*100)/100);        
         }
       });
       console.log(chartt.data.labels);
